added feature and page endpoints
